# xanadu-og-grpc

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.MD  envoy.yaml
backend/: Cargo.toml  build.rs
backend/src/: main.rs
frontend/: client.js  index.html  ogtemplate_grpc_web_pb.js  ogtemplate_pb.js  package-lock.json  package.json
protos/: ogtemplate.proto
