[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4.3"
prost = "0.7.0"
futures = "0.3.15"
futures-core = "0.3.15"
futures-util = "0.3.15"
tokio = {version="1.7.0",features = ["rt-multi-thread","macros","sync","time"]}
tokio-stream = "0.1.6"
async-stream = "0.3.2"
serde = { version="1.0.126", features = ["derive"]}
serde_json = "1.0.64"
rand = "0.8.4"

[build-dependencies]
tonic-build = "0.4"
